@@ -8,7 +8,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class PropiedadService {
@@ -30,7 +29,7 @@ public class PropiedadService {
         List<Propiedad> propiedades = (List<Propiedad>) propiedadRepository.findAll();
         return propiedades.stream()
                 .map(propiedad -> modelMapper.map(propiedad, PropiedadDTO.class))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public PropiedadDTO save(PropiedadDTO propiedadDTO) {
